k8s/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: backend
          image: piconn/backend
          ports:
            - containerPort: 3000
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "50m"
          #   limits:
          #     memory: "128Mi"
          #     cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - name: backend
      protocol: TCP
      port: 80
      targetPort: 3000
